--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "heroicons": "^1.0.4",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
+    "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "tailwindcss-scrollbar": "^0.1.0",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
