--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "^12.20.25",
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
+    "@types/react-helmet": "^6.1.3",
     "date-fns": "^2.24.0",
     "heroicons": "^1.0.4",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
     "tailwindcss-scrollbar": "^0.1.0",
     "typescript": "^4.4.3",
