--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +13,7 @@
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.3",
+    "axios": "^0.23.0",
     "date-fns": "^2.24.0",
     "heroicons": "^1.0.4",
     "react": "^17.0.2",
@@ -19,6 +21,8 @@
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.17.4",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "tailwindcss-scrollbar": "^0.1.0",
     "typescript": "^4.4.3",
@@ -52,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.1",
     "autoprefixer": "^10.3.4",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.15"
