--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.23.0",
     "date-fns": "^2.24.0",
     "heroicons": "^1.0.4",
+    "history": "^5.0.1",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-day-picker": "^7.4.10",
