--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-date-range": "^1.4.0",
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
+    "react-easy-swipe": "0.0.22",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.17.4",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "tailwindcss-scrollbar": "^0.1.0",
