--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "throughne",
   "version": "0.1.0",
+  "homepage": "https://joannanapora.github.io/kalkulator-aneczki",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.4.1",
@@ -40,7 +41,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +66,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.1",
     "autoprefixer": "^10.3.4",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.15"
   }
