--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -21,6 +21,30 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+ build:
+    name: Build
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    
+    - name: Install Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: 13.x
+    
+    - name: Install NPM packages
+      run: npm ci
+    
+    - name: Build project
+      run: npm run build
+    
+    - name: Upload production-ready build files
+      uses: actions/upload-artifact@v2
+      with:
+        name: production-files
+        path: ./build
   # Single deploy job since we're just deploying
   deploy:
     environment:
